--- a/index.html
+++ b/index.html
@@ -3,46 +3,154 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-    <title>Corey Johnsen</title>
+    <title>Corey Johnsen | Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="resources/styles/styles.css">
 </head>
 <body>
-    <h1 class="nameHeader">Corey Johnsen</h1>
-    <div class="aboutMe">
-        <div class="textBlock">
-            <h3>About Me</h3>
-            <p>
-                I'm a CS and Statistics student at the University of Wisconsin - Madison in my junior year. I'm currently working as an Edison Sofwtare Intern at GE Healthcare in Waukesha, WI and have previously worked at Direct Supply as a Software Engineering Intern as well. I love to learn 
-                and am especially passionate about AI and algorithm design.
-            </p>
-        </div>
-        <img src="images/CoreyHeadshot.JPG" class="headshot">
+    <canvas id="particleCanvas"></canvas>
+    <div class="background-animation"></div>
+    <div class="content">
+        <h1>Corey Johnsen</h1>
+        <button class="explore-btn" onclick="document.getElementById('projects').scrollIntoView({ behavior: 'smooth' });">Explore</button>
     </div>
-    <h2 class="subheader">Projects</h2>
-    <div class="cardBlock">
-        <div class="projectCard">
-            <a href="http://genetic.johnsencorey.com" class="cardAnchor" target="_blank">
-                <img src="images/geneticAlgorithmsPreview.png" class="cardImg">
-                <div class="cardText">
-                    <h3>Genetic Algorithms</h3>
-                    <p>A couple different simulations that explore genetic algorithms for pathfinding and solving NP-Hard problems.</p>
+    <div id="projects" class="projects-section">
+        <a class="project-link" href="https://genetic.johnsencorey.com">
+            <div class="project">
+                <img class="project-image" src="resources/images/logos/genetic.png" alt="Genetic Algorithms">
+                <h2 class="project-title">Genetic Algorithms</h2>
+                <p class="project-description">A couple different simulations that explore genetic algorithms for pathfinding and solving NP-Hard problems.</p>
+                <div class="project-badges">
+                    <span class="badge">Algorithms</span>
+                    <span class="badge">Neural Networks</span>
                 </div>
-            </a>
-        </div>
-        <div class="projectCard">
-            <a href="https://github.com/coreyjohnsen/gpu-price-tracker" class="cardAnchor" target="_blank">
-                <img src="images/GPUPriceTrackerPreview.png" class="cardImg">
-                <div class="cardText">
-                    <h3>PC Part Price Tracker</h3>
-                    <p>Software that uses webscraping to notify users via email when prices for a given product go below a desired threshold.</p>
+            </div>
+        </a>
+        <a class="project-link" href="projects/gpu.html">
+            <div class="project">
+                <img class="project-image" src="resources/images/logos/gpu.png" alt="GPU Price Tracker">
+                <h2 class="project-title">GPU Price Monitor</h2>
+                <p class="project-description">Software that uses webscraping to notify users via email when prices for a given product go below a desired threshold.</p>
+                <div class="project-badges">
+                    <span class="badge">Python</span>
+                    <span class="badge">Web Scraping</span>
                 </div>
-            </a>
-        </div>
+            </div>
+        </a>
+        <a class="project-link" href="projects/mole-mate.html">
+            <div class="project">
+                <img class="project-image" src="resources/images/logos/mm.png" alt="Mole Mate">
+                <h2 class="project-title">Mole Mate</h2>
+                <p class="project-description">Complete web application that uses AI to predict the risk of a mole based on an image.</p>
+                <div class="project-badges">
+                    <span class="badge">AI</span>
+                    <span class="badge">PyTorch</span>
+                    <span class="badge">Flask</span>
+                    <span class="badge">AWS</span>
+                </div>
+            </div>
+        </a>
+        <a class="project-link" href="projects/ace-analytics.html">
+            <div class="project">
+                <img class="project-image" src="resources/images/logos/aa.png" alt="Ace Analytics">
+                <h2 class="project-title">Ace Analytics</h2>
+                <p class="project-description">WIP application that allows users to analyze their poker history and view statistics.</p>
+                <div class="project-badges">
+                    <span class="badge">Python</span>
+                    <span class="badge">PyQt</span>
+                    <span class="badge">Statistics</span>
+                </div>
+            </div>
+        </a>
     </div>
-    <div class="footer">
-        <a href="https://www.linkedin.com/in/coreyjohnsen" target="_blank"><img src="images/icons/linkedin.ico" class="icon"></a>
-        <a href="https://github.com/coreyjohnsen" target="_blank"><img src="images/icons/github.ico" class="icon"></a>
-        <a href="mailto:cjjohnsen@wisc.edu" target="_blank"><img src="images/icons/mail.ico" class="icon"></a>
-    </div>
+    <div class="back-to-top" onclick="document.documentElement.scrollIntoView({ behavior: 'smooth' });"></div>
+    <script>
+        // Interactive Background Animation Script
+        document.addEventListener('mousemove', (e) => {
+            const background = document.querySelector('.background-animation');
+            const {clientX: x, clientY: y} = e;
+            const centerX = window.innerWidth / 2;
+            const centerY = window.innerHeight / 2;
+            const deltaX = x - centerX;
+            const deltaY = y - centerY;
+            
+            background.style.backgroundPosition = `${50 + deltaX * 0.05}% ${50 + deltaY * 0.05}%`;
+        });
+
+        // Particle Background Script
+        const canvas = document.getElementById('particleCanvas');
+        const ctx = canvas.getContext('2d');
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+
+        let particlesArray;
+
+        class Particle {
+            constructor(x, y, directionX, directionY, size, color) {
+                this.x = x;
+                this.y = y;
+                this.directionX = directionX;
+                this.directionY = directionY;
+                this.size = size;
+                this.color = color;
+            }
+            // Method to draw individual particles
+            draw() {
+                ctx.beginPath();
+                ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2, false);
+                ctx.fillStyle = this.color;
+                ctx.fill();
+            }
+            // Check particle position, check mouse position, move the particle, draw the particle
+            update() {
+                if (this.x + this.size > canvas.width || this.x - this.size < 0) {
+                    this.directionX = -this.directionX;
+                }
+                if (this.y + this.size > canvas.height || this.y - this.size < 0) {
+                    this.directionY = -this.directionY;
+                }
+                this.x += this.directionX;
+                this.y += this.directionY;
+                this.draw();
+            }
+        }
+        // Create particle array
+        function init() {
+            particlesArray = [];
+            let numberOfParticles = (canvas.height * canvas.width) / 8000;
+            for (let i = 0; i < numberOfParticles; i++) {
+                let size = (Math.random() * 5) + 1;
+                let x = (Math.random() * ((innerWidth - size * 2) - (size * 2)) + size * 2);
+                let y = (Math.random() * ((innerHeight - size * 2) - (size * 2)) + size * 2);
+                let directionX = (Math.random() * 5) - 2.5;
+                let directionY = (Math.random() * 5) - 2.5;
+                let color = 'rgba(255, 255, 255, 0.5)';
+
+                particlesArray.push(new Particle(x, y, directionX, directionY, size, color));
+            }
+        }
+        // Animation loop
+        function animate() {
+            requestAnimationFrame(animate);
+            ctx.clearRect(0, 0, innerWidth, innerHeight);
+
+            for (let i = 0; i < particlesArray.length; i++) {
+                particlesArray[i].update();
+            }
+        }
+        init();
+        animate();
+
+        // Back to Top Arrow
+        window.addEventListener('scroll', () => {
+            const backToTop = document.querySelector('.back-to-top');
+            if (window.pageYOffset > 300) {
+                backToTop.classList.add('show');
+            } else {
+                backToTop.classList.remove('show');
+            }
+        });
+    </script>
 </body>
 </html>
+
