--- a/index.html
+++ b/index.html
@@ -6,13 +6,36 @@
     <title>Corey Johnsen | Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/styles/styles.css">
+    <script src="https://kit.fontawesome.com/ca4ab00c10.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <canvas id="particleCanvas"></canvas>
     <div class="background-animation"></div>
     <div class="content">
         <h1>Corey Johnsen</h1>
-        <button class="explore-btn" onclick="document.getElementById('projects').scrollIntoView({ behavior: 'smooth' });">Explore</button>
+        <button class="explore-btn" onclick="document.getElementById('about').scrollIntoView({ behavior: 'smooth' });">Explore</button>
+    </div>
+    <div id="about" class="about-section">
+        <div class="about-content">
+            <img src="resources/images/CoreyHeadshot.JPG" alt="Corey Johnsen" class="profile-image">
+            <div class="about-text">
+                <h2>About Me</h2>
+                <p class="about-description">
+                    Hello, I'm Corey Johnsen! I am currently a senior student at the University of Wisconsin-Madison. My interests include traveling, hiking, and spending time outdoors.
+                    I am working as an EEDP Software Intern at GE Healthcare in Waukesha, WI, and have prior experience at Direct Supply. My passion lies in algorithms and AI, particularly in 
+                    using AI to address healthcare challenges. I am always eager to learn about new technologies and keep up to date on the latest developments.
+                </p>
+                <div class="social-media">
+                    <a href="https://github.com/coreyjohnsen"><i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i></a>
+                    <a href="https://www.linkedin.com/in/coreyjohnsen/"><i class="fa-brands fa-linkedin fa-xl" style="color: #ffffff;"></i></a>
+                    <a href="mailto:johnsencorey@gmail.com"><i class="fa-solid fa-envelope fa-xl" style="color: #ffffff;"></i></a>
+                    <a href="resources/files/Corey_Johnsen_Resume.pdf"><i class="fa-solid fa-file-lines fa-xl" style="color: #ffffff;"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="view-projects" onclick="document.getElementById('projects').scrollIntoView({ behavior: 'smooth' });">
+            <i class="fas fa-arrow-down"></i> View Projects
+        </div>
     </div>
     <div id="projects" class="projects-section">
         <a class="project-link" href="https://genetic.johnsencorey.com">
